--- a/summarize_text/requirements.txt
+++ b/summarize_text/requirements.txt
@@ -11,6 +11,7 @@ pypdf
 faiss-cpu
 langchain_chroma
 validators==0.28.1
-youtube-transcript-api==0.6.2
+youtube-transcript-api==0.6.3
 unstructured==0.16.9
 pytube==12.1.3
+pytubefix==8.7.0
