--- a/summarize_text/requirements.txt
+++ b/summarize_text/requirements.txt
@@ -11,7 +11,8 @@ pypdf
 faiss-cpu
 langchain_chroma
 validators==0.28.1
-youtube-transcript-api==0.6.3
+# youtube-transcript-api==0.6.3
 unstructured==0.16.9
 pytube==12.1.3
 pytubefix==8.7.0
+youtube-transcript-api
